[gd_scene load_steps=13 format=3 uid="uid://cinly8233li5b"]

[ext_resource type="PackedScene" uid="uid://bvetq7ixe7r7f" path="res://enemy.tscn" id="2_bsuup"]
[ext_resource type="Script" path="res://Boss.gd" id="2_jlifq"]
[ext_resource type="Texture2D" uid="uid://cj3hlyuomus3s" path="res://muk_attack.png" id="3_mi8oa"]
[ext_resource type="Texture2D" uid="uid://ctrxwr5dslb20" path="res://muk_idle.png" id="3_vm340"]

[sub_resource type="AtlasTexture" id="AtlasTexture_r7nl3"]
atlas = ExtResource("3_mi8oa")
region = Rect2(100, 75, 100, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2jj6"]
atlas = ExtResource("3_mi8oa")
region = Rect2(0, 75, 100, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_37ww5"]
atlas = ExtResource("3_mi8oa")
region = Rect2(100, 0, 100, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_ep3t3"]
atlas = ExtResource("3_mi8oa")
region = Rect2(0, 0, 100, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8w6b"]
atlas = ExtResource("3_vm340")
region = Rect2(0, 0, 100, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwr6m"]
atlas = ExtResource("3_vm340")
region = Rect2(100, 0, 100, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5vdw"]
atlas = ExtResource("3_vm340")
region = Rect2(0, 80, 100, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_cmy1n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7nl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2jj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37ww5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ep3t3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ep3t3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ep3t3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37ww5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2jj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7nl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7nl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7nl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7nl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7nl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7nl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7nl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7nl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7nl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7nl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7nl3")
}],
"loop": true,
"name": &"attack",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8w6b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwr6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5vdw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5vdw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5vdw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwr6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8w6b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8w6b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8w6b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8w6b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8w6b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8w6b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8w6b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8w6b")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}]

[node name="Boss" instance=ExtResource("2_bsuup")]
script = ExtResource("2_jlifq")
weaponType = 2

[node name="Sprite2D" parent="." index="0"]
visible = false

[node name="recoverTime" parent="." index="4"]
wait_time = 2.0

[node name="Animator" type="AnimatedSprite2D" parent="." index="6"]
scale = Vector2(1.85, 1.85)
sprite_frames = SubResource("SpriteFrames_cmy1n")
animation = &"attack"

[node name="AttackTimer" type="Timer" parent="." index="7"]
wait_time = 0.85
one_shot = true

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
